--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:id="@+id/layoutContent"
     tools:context="com.example.owner.minesweeper.MainActivity">
+
+    <TextView
+        android:id="@+id/winnerMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <com.example.owner.minesweeper.MineSweeperView
         android:id="@+id/mineSweeperView"
         android:layout_width="200dp"
         android:layout_height="200dp" />
+
+    <TextView
+        android:id="@+id/tooManyFlagsMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_dark" />
 
     <ToggleButton
         android:id="@+id/btToggle"
