--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="#e1bffd"
+    android:screenOrientation="portrait"
+    android:configChanges="keyboardHidden|orientation|screenSize"
     android:id="@+id/layoutContent"
     tools:context="com.example.owner.minesweeper.MainActivity">
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/minesweeper"
+            android:textSize="50sp"
+            android:textColor="#ffffff" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <EditText
         android:id="@+id/etGuess"
         android:inputType="number"
+        android:digits="123456789"
         android:hint="@string/numSquares_prompt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -21,6 +40,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/startBtn" />
+
+    <Button
+        android:id="@+id/infoBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/info" />
 
 
 </LinearLayout>
